2007-10-08  Alexander Larsson  <alexl@redhat.com>

        * common/gvfsdaemonprotocol.h:
	Add defines for monitoring
	
        * client/Makefile.am:
        * client/gdaemondirectorymonitor.[ch]: 
        * client/gdaemonfilemonitor.[ch]:
        * client/gdaemonfile.c:
	Add daemon directory monitor and initial work on file monitor
	
        * client/gdaemonfileenumerator.c:
	Make path_counter private
	Return DBUS_HANDLER_RESULT_HANDLED when handling messages.
	
        * client/gdaemonvfs.[ch]:
	Make _g_mount_ref_ref "public"
	
        * client/gvfsdaemondbus.c:
	Handle NULL callbacks for async calls
	
        * daemon/Makefile.am:
        * daemon/gvfsbackend.[ch]:
        * daemon/gvfsjobcreatemonitor.[ch]:
	Add create_dir_monitor and create_file_monitor.
	Add g_vfs_backend_get_daemon
	
        * daemon/gvfsmonitor.[ch]:
	Helper code for monitors
	
        * daemon/gvfsbackendtrash.c:
	Implement directory monitor for trash dirs

2007-10-08  Sebastian Dröge  <slomo@circular-chaos.org>

	* client/gdaemonvfs.c: (g_daemon_vfs_finalize),
	(g_daemon_vfs_init), (fill_supported_uri_schemes),
	(g_daemon_vfs_get_supported_uri_schemes),
	(g_daemon_vfs_class_init):
	* client/smburi.c: (smb_to_uri_scheme),
	(g_vfs_uri_mapper_smb_class_init):
	* common/gvfsdaemonprotocol.h:
	* common/gvfsurimapper.c: (g_vfs_uri_mapper_to_uri_scheme):
	* common/gvfsurimapper.h:
	* daemon/mount.c: (list_mount_types), (dbus_message_function):
	Implement get_supported_uri_schemes method and add a GVfsUriMapper
	method to map a mount spec to an URI scheme.

2007-10-05  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendtrash.c:
        Add delete support to trash

2007-10-04  Alexander Larsson  <alexl@redhat.com>

        * common/gvfsuriutils.c:
        (g_uri_unescape_string):
	Allow NULL end pointer

        * daemon/gvfsjob.[ch]:
	Add cancellable to GVfsJob for backends that want one
	
        * daemon/gvfsjobenumerate.[ch]:
        * daemon/gvfsjobqueryinfo.[ch]: