@@ -1,3 +1,12 @@
+2007-10-09  Alexander Larsson  <alexl@redhat.com>
+
+        * configure.ac:
+	Pull in gio-unix-2.0
+	
+        * daemon/gvfsbackendtrash.c:
+	Use GUnixMounts instead of volume monitor
+	This shows *all* mounts and avoids unnecessary stuff
+
 2007-10-08  Alexander Larsson  <alexl@redhat.com>
 
         * common/gvfsdaemonprotocol.h:
